Fix spacing between logo and title

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {
 
 .text {
   text-align: center;
-  margin: 0 24px;
+  margin: 30px 24px 0 24px;
 }
 
 .text .title {
